--- a/src/styles/checkbox.css
+++ b/src/styles/checkbox.css
@@ -30,9 +30,9 @@
   width: 16px;
   height: 10px;
   background: transparent;
-  top: 6px;
-  left: 4px;
-  border: 4px solid #333;
+  top: 2px;
+  left: 2px;
+  border: 4px solid #ED6000;
   border-top: none;
   border-right: none;
   transform: rotate(-45deg);
