--- a/src/styles/map.css
+++ b/src/styles/map.css
@@ -1,8 +1,7 @@
-.c-app {
-  text-align: center;
-}
-
-.c-app .leaflet-container {
-  width: 100%;
-  height: 800px;
+.c-map .leaflet-container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
 }
