--- a/src/styles/drawer.css
+++ b/src/styles/drawer.css
@@ -19,3 +19,49 @@
 .c-drawer .c-drawer--icon {
   position: absolute;
 }
+
+.hamburger {
+  position: absolute;
+  right: 40px;
+  top: 9px;
+}
+
+.hamburger .line{
+  width: 40px;
+  height: 5px;
+  background-color: #333333;
+  display: block;
+  margin: 4px auto;
+  -webkit-transition: all 0.3s ease-in-out;
+  -o-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+}
+
+.hamburger:hover{
+  cursor: pointer;
+}
+
+.hamburger.is-active .line:nth-child(2){
+  opacity: 0;
+}
+
+.hamburger.is-active .line:nth-child(1){
+  -webkit-transform: translateY(13px) rotate(45deg);
+  -ms-transform: translateY(13px) rotate(45deg);
+  -o-transform: translateY(13px) rotate(45deg);
+  transform: translateY(13px) rotate(45deg);
+  margin: 5px auto;
+}
+
+.hamburger.is-active .line:nth-child(3){
+  -webkit-transform: translateY(-13px) rotate(-45deg);
+  -ms-transform: translateY(-13px) rotate(-45deg);
+  -o-transform: translateY(-13px) rotate(-45deg);
+  transform: translateY(-13px) rotate(-45deg);
+  margin: 10px auto;
+}
+
+.hamburger.is-active {
+  right: 37px;
+  top: 6px;
+}
