--- a/src/styles/container.css
+++ b/src/styles/container.css
@@ -4,8 +4,11 @@
   padding: 5px;
   background: white;
   opacity: 0.9;
-  border: 1px solid black;
-  text-align: center;
+}
+
+.c-container.shadow {
+  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16), 0 0 0 1px rgba(0,0,0,0.08);
+  transition: box-shadow 200ms cubic-bezier(0.4,0.0,0.2,1);
 }
 
 .c-container .c-container--text {
