--- a/src/styles/drawer.css
+++ b/src/styles/drawer.css
@@ -3,7 +3,7 @@
   left: 0;
   bottom: 0;
   width: 100%;
-  border: 1px solid;
+  border-top: 1px solid;
   text-align: left;
   padding: 10px;
   height: 30px;
