--- a/src/styles/searchBox.css
+++ b/src/styles/searchBox.css
@@ -1,16 +1,39 @@
 .c-searchBox {
+  position: relative;
+  display: block;
+  width: 300px;
+  height: 50px;
+}
+
+.c-searchBox input {
+    width: 250px;
     color: rgba(0,0,0,0.38);
-    position: relative;
-    display: inline-block;
-    min-width: 200px;
     line-height: 30px;
     font-family: sans-serif;
     font-size: 14px;
-    padding: 5px;
+    padding: 10px 40px 10px 10px;
+    border: none;
+    box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16), 0 0 0 1px rgba(0,0,0,0.08);
+    transition: box-shadow 200ms cubic-bezier(0.4,0.0,0.2,1);
+    font-weight: lighter;
 }
 
-.c-searchBox:hover, .c-searchBox:focus {
+.c-searchBox:hover input,
+.c-searchBox input:focus {
   box-shadow: 0 3px 8px 0 rgba(0,0,0,0.2), 0 0 0 1px rgba(0,0,0,0.08);
   outline: 0;
   border: none;
+}
+
+.c-searchBox .c-searchBox--icon {
+  display: block;
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: auto;
+  height: auto;
+  padding: 10px;
+  border: 0;
+  background: none;
+  cursor: pointer;
 }
