--- a/src/styles/button.css
+++ b/src/styles/button.css
@@ -6,7 +6,7 @@
   padding: 10px;
 }
 
-.c-button:hover {
+.c-button.hovering:hover {
   box-shadow: 0 3px 8px 0 rgba(0,0,0,0.2), 0 0 0 1px rgba(0,0,0,0.08);
 }
 
@@ -18,6 +18,7 @@
 
 .c-button .c-button--text.left {
   text-align: left;
+  padding-left: 35px;
 }
 
 .c-button .c-button--text.center {
