Add pointRight prop for icon component

--- a/src/styles/icon.css
+++ b/src/styles/icon.css
@@ -3,6 +3,7 @@
   top: 0;
   bottom: 0;
   padding: 10px;
+  transition: all 0.3s ease-in-out;
 }
 
 .icon img {
@@ -20,4 +21,8 @@
 
 .icon:hover {
   cursor: pointer;
+}
+
+.icon.pointRight {
+  transform: rotate(-90deg);
 }
