--- a/src/styles/filterList.css
+++ b/src/styles/filterList.css
@@ -1,30 +1,32 @@
-.menus {
-  margin-right: 115px;
+.collapsibleList {
+  height: auto;
   width: 100%;
+  margin-right: 115px;
   text-align: left;
 }
 
-.menus ul {
-  list-style: none;
+.collapsibleList ul {
   display: block;
+  width: 85%;
   left: 0;
   padding-left: 28px;
   margin-top: 5px;
-  width: 85%;
+  list-style: none;
 }
 
-.menus li {
-  text-align: left;
-  margin-bottom: 10px;
+.collapsibleList li {
   position: relative;
+  margin-bottom: 10px;
+  text-align: left;
 }
 
-.menus .c-container {
+.collapsibleList .c-container {
   margin-bottom: 0;
+  margin-top: 0;
 }
 
-.menus .c-badge {
+.collapsibleList .c-badge {
+  position: absolute;
   top: 0;
   right: 0;
-  position: absolute;
 }
