Fix drawer height issue when active

--- a/src/styles/drawer.css
+++ b/src/styles/drawer.css
@@ -15,7 +15,9 @@
 }
 
 .c-drawer.active {
-  height: 100%;
+  height: -webkit-calc(100% - 20px);
+  height: -moz-calc(100% - 20px);
+  height: calc(100% - 20px);
   transition: all 0.3s ease-in-out;
   -webkit-transition: all 0.3s ease-in-out;
   -o-transition: all 0.3s ease-in-out;
