--- a/src/styles/drawer.css
+++ b/src/styles/drawer.css
@@ -12,6 +12,13 @@
   -webkit-transition: all 0.3s ease-in-out;
   -o-transition: all 0.3s ease-in-out;
   opacity: 0.9;
+  -webkit-box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16), 0 0 0 1px rgba(0,0,0,0.08);
+  box-shadow: 0 -2px 2px 0 rgba(0,0,0,0.16), 0 0 0 1px rgba(0,0,0,0.08);
+  -webkit-transition: -webkit-box-shadow 200ms cubic-bezier(0.4,0.0,0.2,1);
+  transition: -webkit-box-shadow 200ms cubic-bezier(0.4,0.0,0.2,1);
+  -o-transition: box-shadow 200ms cubic-bezier(0.4,0.0,0.2,1);
+  transition: box-shadow 200ms cubic-bezier(0.4,0.0,0.2,1);
+  transition: box-shadow 200ms cubic-bezier(0.4,0.0,0.2,1), -webkit-box-shadow 200ms cubic-bezier(0.4,0.0,0.2,1);
 }
 
 .c-drawer.active {
