--- a/src/styles/drawer.css
+++ b/src/styles/drawer.css
@@ -7,11 +7,10 @@
   text-align: left;
   padding: 10px;
   height: 30px;
-  background-color: white;
+  background-color: rgba(255, 255, 255, 0.9);
   transition: all 0.3s ease-in-out;
   -webkit-transition: all 0.3s ease-in-out;
   -o-transition: all 0.3s ease-in-out;
-  opacity: 0.9;
 }
 
 .c-drawer.active {
