--- a/src/styles/documents.css
+++ b/src/styles/documents.css
@@ -1,21 +1,21 @@
 .outerContainer {
-  margin: 20px;
+  padding: 20px;
 }
 
 .outerContainer > .c-container {
-  width: 90%;
+  width: 100%;
   background: none;
+  text-align: center;
+  margin: 0;
 }
 
 .c-documents {
-  position: relative;
-  margin: 10px;
-  display: block;
-  text-align: left;
+  width: 85%;
+  margin: 0 auto;
 }
 
 .c-documents .c-container {
-  margin: 5px;
+  margin: 0;
   width: 100%;
   position: relative;
   opacity: 1;
@@ -23,6 +23,7 @@
 
 .c-documents > .c-container {
   margin-bottom: 50px;
+  width: 100%;
 }
 
 .c-documents .c-searchBox {
