--- a/src/styles/drawer.css
+++ b/src/styles/drawer.css
@@ -6,7 +6,7 @@
   border-top: 1px solid;
   text-align: left;
   padding: 10px;
-  height: 30px;
+  height: 50px;
   background-color: rgba(255, 255, 255, 0.9);
   transition: all 0.3s ease-in-out;
   -webkit-transition: all 0.3s ease-in-out;
@@ -23,7 +23,7 @@
 .c-drawer.active {
   height: -webkit-calc(100% - 20px);
   height: -moz-calc(100% - 20px);
-  height: calc(100% - 20px);
+  height: 101%;
   transition: all 0.3s ease-in-out;
   -webkit-transition: all 0.3s ease-in-out;
   -o-transition: all 0.3s ease-in-out;
@@ -52,8 +52,8 @@
 
 .c-hamburger {
   position: absolute;
-  right: 40px;
-  top: 9px;
+  right: 20px;
+  top: 10px;
 }
 
 .c-hamburger .line{
@@ -92,6 +92,6 @@
 }
 
 .c-hamburger.active {
-  right: 37px;
-  top: 6px;
+  right: 20px;
+  top: 10px;
 }
