Update styling of the filters and drawer components

--- a/src/styles/inputRange.css
+++ b/src/styles/inputRange.css
@@ -3,8 +3,16 @@
   margin: 15px 15px 40px 25px;
 }
 
+.input-range__label {
+  color: #333;
+}
+
+.input-range__track {
+  background: #999;
+}
+
 .input-range__track--active {
-    background: #ed6000;
+  background: #ed6000;
 }
 
 .input-range__slider {
