--- a/src/styles/searchBox.css
+++ b/src/styles/searchBox.css
@@ -3,10 +3,11 @@
   display: block;
   width: 370px;
   height: 50px;
+  text-align: left;
 }
 
 .c-searchBox input {
-  width: 320px;
+  width: 100%;
   color: #333;
   line-height: 30px;
   font-family: sans-serif;
