Dim the brightness on map tiles a little

--- a/src/styles/map.css
+++ b/src/styles/map.css
@@ -5,6 +5,10 @@
   right: 0;
   bottom: 0;
   z-index: 0;
+  background: white;
+}
+.c-map .leaflet-container .leaflet-pane.leaflet-tile-pane {
+  opacity: 0.75;
 }
 
 .c-map .leaflet-container .feature {
