--- a/src/styles/checkbox.css
+++ b/src/styles/checkbox.css
@@ -18,8 +18,8 @@
   height: 100%;
   top: 0;
   left: 0;
-  background: #f5f5f5;
-  box-shadow: inset 0 1px 0 0 #ccc;
+  background: #efefef;
+  box-shadow: inset 0 1px 0 0 #bbb;
 }
 
 .c-checkbox label:after {
