--- a/src/styles/filters.css
+++ b/src/styles/filters.css
@@ -15,6 +15,7 @@
   min-height: 25vh;
   max-height: 75vh;
   padding: 5px;
+  opacity: 0.9;
   background: white;
   box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16), 0 0 0 1px rgba(0,0,0,0.08);
   transition: box-shadow 200ms cubic-bezier(0.4,0.0,0.2,1);
