--- a/src/styles/searchBox.css
+++ b/src/styles/searchBox.css
@@ -8,7 +8,7 @@
 
 .c-searchBox input {
   width: 100%;
-  color: #333;
+  color: black;
   line-height: 30px;
   font-family: sans-serif;
   font-size: 14px;
