Set padding-left to 0 and min-width to 150px to button in app

--- a/src/styles/button.css
+++ b/src/styles/button.css
@@ -24,3 +24,8 @@
 .c-button .c-button--text.center {
   text-align: center;
 }
+
+.c-app .c-button--text.left {
+  padding-left: 0;
+  min-width: 150px;
+}
