--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -22,6 +22,13 @@
   font-size: large;
 }
 
+.c-app .c-alerts {
+  position: absolute;
+  bottom: 50px;
+  right: 0px;
+  text-align: left;
+}
+
 @keyframes logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
