--- a/src/styles/drawer.css
+++ b/src/styles/drawer.css
@@ -5,7 +5,6 @@
   width: 100%;
   border-top: 1px solid;
   text-align: left;
-  padding: 10px;
   height: 50px;
   background-color: rgba(255, 255, 255, 0.95);
   box-shadow: 0 -2px 2px 0 rgba(0,0,0,0.16), 0 0 0 1px rgba(0,0,0,0.08);
@@ -18,10 +17,8 @@
 }
 
 .c-drawer .c-drawer--header {
-  height: 30px;
-}
-
-.c-drawer .c-drawer--header:hover {
+  min-height: 30px;
+  padding: 10px;
   cursor: pointer;
 }
 
