--- a/src/styles/filterList.css
+++ b/src/styles/filterList.css
@@ -31,6 +31,13 @@
   right: 0;
 }
 
-.c-filterList .icon {
-  top: -4px;
+@media (max-width: 670px) {
+
+  .c-filterList .icon {
+    top: -5px;
+  }
+
+  .c-filterList .icon.pointRight {
+    top: 0px;
+  }
 }
