Improve responsiveness of filters for small-devices

--- a/src/styles/searchBox.css
+++ b/src/styles/searchBox.css
@@ -29,8 +29,17 @@
     width: 80vw;
   }
 
-  .filtersDropdown > .c-container {
+  .filtersHeader + .c-container {
     margin-top: 45px;
   }
+
+}
+
+@media (max-height: 360px) {
+
+  .filtersHeader + .c-container {
+    margin-top: 25px;
+  }
+
 
 }
