--- a/src/styles/municipalities.css
+++ b/src/styles/municipalities.css
@@ -8,6 +8,7 @@
   background-color: rgba(255, 255, 255, 0.95);
   width: 85%;
   margin: 0 auto;
+  overflow: auto;
 }
 
 .c-municipalities .c-container {
