--- a/src/styles/municipalities.css
+++ b/src/styles/municipalities.css
@@ -6,13 +6,17 @@
   bottom: 0;
   text-align: center;
   background-color: rgba(255, 255, 255, 0.95);
-  width: 85%;
+  width: 100%;
+  height: 100%;
+  padding: 0 5vw;
   margin: 0 auto;
   overflow: auto;
+  text-align: left;
 }
 
 .c-municipalities .c-container {
   width: 100%;
+  margin: 15px 0;
 }
 
 .c-municipalities .c-searchBox {
