--- a/src/styles/documents.css
+++ b/src/styles/documents.css
@@ -57,22 +57,19 @@
 
 .c-tags .c-container {
   width: auto;
+  background: #eeeeee;
   margin: 5px;
   padding: 7px;
   display: flex;
   justify-content: space-between;
 }
 
-.c-tags span {
-  width: auto;
-  min-width: 0;
-  line-height: 30px;
-  display: inline-block;
-  padding-right: 10px;
+.c-tags .c-tags--text {
+  padding-right: 5px;
 }
 
 .c-selectedFilters .icon {
-  padding: 0 5px 0 0;
+  padding: 2px 0 0 0;
   position: relative;
   display: inline-block;
 }
