--- a/src/styles/reporting.css
+++ b/src/styles/reporting.css
@@ -25,49 +25,26 @@
 .c-documents .c-reporting .c-dropdown .c-dropdown--header {
   display: flex;
   justify-content: space-between;
+}
 
-  h3 {
+.c-documents .c-reporting .c-dropdown .c-dropdown--header  h3 {
     font-weight: normal;
     line-height: 30px;
-  }
 }
 
-.c-documents .c-reporting .c-dropdown .c-dropdown--select {
-  position: relative;
-  display: inline-block;
-  margin-bottom: 15px;
-  width: 100%;
+.c-documents .c-reporting .c-dropdown ul {
+  list-style: none;
+  -webkit-padding-start: 0px;
+  -webkit-margin-before: 0.5em;
 }
 
-.c-documents .c-reporting .c-dropdown .c-dropdown--select select {
-  display: block;
-  width: 100%;
-  cursor: pointer;
-  padding: 10px 5px;
-  outline: 0;
-  border: 0;
-  border-radius: 0;
-  background: #eeeeee;
-  color: black;
-  appearance: none;
-  font-size: smaller;
-  font-weight: lighter;
-}
-
-.select--arrow {
-  position: absolute;
-  top: 13px;
-  right: 13px;
-  width: 0;
-  height: 0;
-  pointer-events: none;
-  border-style: solid;
-  border-width: 8px 5px 0 5px;
-  border-color: black transparent transparent transparent;
+.c-documents .c-reporting .c-dropdown ul li {
+  margin: 5px;
 }
 
 .c-documents .c-reporting .c-dropdown textarea {
   width: 100%;
+  margin: 5px;
   display: block;
   font-size: smaller;
   font-weight: lighter;
