--- a/src/styles/reporting.css
+++ b/src/styles/reporting.css
@@ -30,6 +30,7 @@
 .c-documents .c-reporting .c-dropdown .c-dropdown--header  h3 {
     font-weight: normal;
     line-height: 30px;
+    margin: 5px 5px 5px 0px;
 }
 
 .c-documents .c-reporting .c-dropdown ul {
@@ -44,9 +45,25 @@
 
 .c-documents .c-reporting .c-dropdown textarea {
   width: 100%;
-  margin: 5px;
   display: block;
   font-size: smaller;
   font-weight: lighter;
   border-color: #dddddd;
+}
+
+.c-documents .c-reporting .c-dropdown .c-dropdown--footer {
+  text-align: center;
+  margin: 10px;
+}
+
+.c-documents .c-reporting .c-dropdown .c-dropdown--footer .c-container {
+  width: auto;
+}
+
+.c-documents .c-reporting .c-dropdown .c-dropdown--footer .c-container .c-button {
+  padding: 7px 10px 7px 10px;
+}
+
+.c-documents .c-reporting .c-dropdown .c-dropdown--footer .c-container .icon {
+  position: absolute;
 }
