--- a/src/styles/button.css
+++ b/src/styles/button.css
@@ -31,6 +31,15 @@
   min-width: 150px;
 }
 
+.c-button.disabled {
+  cursor: not-allowed;
+  opacity: 0.35;
+}
+
+.c-button.hovering.disabled:hover {
+  box-shadow: none;
+}
+
 @media (max-width: 670px) {
 
   .c-zoomControls .c-button {
