--- a/src/styles/typesList.css
+++ b/src/styles/typesList.css
@@ -1,11 +1,11 @@
-.c-filterList {
+.c-typesList {
   height: auto;
   width: 100%;
   margin-right: 115px;
   text-align: left;
 }
 
-.c-filterList ul {
+.c-typesList ul {
   display: block;
   width: 100%;
   left: 0;
@@ -15,18 +15,18 @@
   list-style: none;
 }
 
-.c-filterList li {
+.c-typesList li {
   position: relative;
   margin-bottom: 10px;
   text-align: left;
 }
 
-.c-filterList .c-container {
+.c-typesList .c-container {
   margin-bottom: 0;
   margin-top: 0;
 }
 
-.c-filterList .c-badge {
+.c-typesList .c-badge {
   position: absolute;
   top: 0;
   right: 0;
@@ -34,11 +34,11 @@
 
 @media (max-width: 670px) {
 
-  .c-filterList .icon {
+  .c-typesList .icon {
     top: -5px;
   }
 
-  .c-filterList .icon.pointRight {
+  .c-typesList .icon.pointRight {
     top: 0px;
   }
 }
