--- a/src/styles/alert.css
+++ b/src/styles/alert.css
@@ -46,6 +46,13 @@
   border: none;
 }
 
+.react-responsive-modal-modal .c-alert--content p {
+  padding: 5px;
+  width: auto;
+  margin: 0;
+  color: red;
+}
+
 .react-responsive-modal-modal .c-alert--footer {
   order: 99;
   margin: auto;
